// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParticipantsList should render correctly as moderator 1`] = `
<div
  id="portal"
>
  <div
    class="portal"
    role="dialog"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="portal__frame"
      >
        <div
          class="portal__content"
          role="dialog"
        >
          <aside
            class="participants"
          >
            <header
              class="participants__header"
            >
              <h4>
                Board Participants (
                3
                )
              </h4>
              <svg
                class="header__icon"
              >
                icon-search.svg
              </svg>
              <input
                placeholder="Search"
              />
            </header>
            <ul
              class="participants__list"
            >
              <div
                class="list__header"
              >
                <label>
                  Name
                </label>
                <label>
                  Admin
                </label>
              </div>
              <li>
                <figure>
                  <img
                    alt="Avatar of Participant 0"
                    src="avatar.png"
                  />
                  <figcaption>
                    Participant 0
                  </figcaption>
                </figure>
                <button
                  class="toggle-button toggle-button--left participant__permission-toggle"
                />
              </li>
              <li>
                <figure>
                  <img
                    alt="Avatar of Participant 1"
                    src="avatar.png"
                  />
                  <figcaption>
                    Participant 1
                  </figcaption>
                </figure>
                <button
                  class="toggle-button toggle-button--left participant__permission-toggle"
                />
              </li>
              <li>
                <figure>
                  <img
                    alt="Avatar of Participant 2"
                    src="avatar.png"
                  />
                  <figcaption>
                    Participant 2
                  </figcaption>
                </figure>
                <button
                  class="toggle-button toggle-button--left participant__permission-toggle"
                />
              </li>
            </ul>
          </aside>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`ParticipantsList should render correctly on close 1`] = `<div />`;

exports[`ParticipantsList should render correctly on filtered participants 1`] = `
<div
  id="portal"
>
  <div
    class="portal"
    role="dialog"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="portal__frame"
      >
        <div
          class="portal__content"
          role="dialog"
        >
          <aside
            class="participants"
          >
            <header
              class="participants__header"
            >
              <h4>
                Board Participants (
                3
                )
              </h4>
              <svg
                class="header__icon"
              >
                icon-search.svg
              </svg>
              <input
                placeholder="Search"
              />
            </header>
            <ul
              class="participants__list"
            >
              <div
                class="list__header"
              >
                <label>
                  Name
                </label>
              </div>
              <li>
                <figure>
                  <img
                    alt="Avatar of Participant 0"
                    src="avatar.png"
                  />
                  <figcaption>
                    Participant 0
                  </figcaption>
                </figure>
              </li>
            </ul>
          </aside>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`ParticipantsList should render correctly on open 1`] = `
<div
  id="portal"
>
  <div
    class="portal"
    role="dialog"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="portal__frame"
      >
        <div
          class="portal__content"
          role="dialog"
        >
          <aside
            class="participants"
          >
            <header
              class="participants__header"
            >
              <h4>
                Board Participants (
                3
                )
              </h4>
              <svg
                class="header__icon"
              >
                icon-search.svg
              </svg>
              <input
                placeholder="Search"
              />
            </header>
            <ul
              class="participants__list"
            >
              <div
                class="list__header"
              >
                <label>
                  Name
                </label>
              </div>
              <li>
                <figure>
                  <img
                    alt="Avatar of Participant 0"
                    src="avatar.png"
                  />
                  <figcaption>
                    Participant 0
                  </figcaption>
                </figure>
              </li>
              <li>
                <figure>
                  <img
                    alt="Avatar of Participant 1"
                    src="avatar.png"
                  />
                  <figcaption>
                    Participant 1
                  </figcaption>
                </figure>
              </li>
              <li>
                <figure>
                  <img
                    alt="Avatar of Participant 2"
                    src="avatar.png"
                  />
                  <figcaption>
                    Participant 2
                  </figcaption>
                </figure>
              </li>
            </ul>
          </aside>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;
